--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basevite",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite  --host",
     "build": "date +%Y%m%d.%H%M>src/version.json;vite build  --emptyOutDir",
     "preview": "vite preview --host"
   },
