--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "preview": "vite preview --host"
   },
   "devDependencies": {
-    "vite": "^2.7.1"
+    "vite": "^3.1.3"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "jquery-ui-bundle": "^1.12.1-migrate",
   }
 }
